--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
+    "start:fe": "cd apps/fe-new && pnpm start",
+    "start:ws": "cd apps/ws && pnpm start",
+    "start": "concurrently \"pnpm run start:ws\" \"pnpm run start:fe\"",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
+    "concurrently": "^9.2.0",
     "prettier": "^3.6.2",
     "turbo": "^2.5.6",
     "typescript": "5.9.2"
